# echo

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  flatpak.yml  release.yml
build-aux/: cargo-sources.json  io.github.mrb101.Echo.json
data/: com.echo.Echo.desktop  io.github.mrb101.Echo.desktop  io.github.mrb101.Echo.metainfo.xml
data/resources/: echo.gresource.xml  style.css
src/: app.rs  config.rs  main.rs
src/models/: account.rs  attachment.rs  conversation.rs  message.rs  mod.rs
src/providers/: mod.rs  router.rs  traits.rs  types.rs
src/providers/claude/: adapter.rs  mod.rs  models.rs  stream.rs
src/providers/gemini/: adapter.rs  mod.rs  models.rs  stream.rs
src/providers/local/: adapter.rs  mod.rs  models.rs  stream.rs
src/services/: accounts.rs  agent.rs  chat.rs  conversation.rs  database.rs  export.rs  keyring.rs  markdown.rs  mod.rs  settings.rs
src/tools/: mod.rs  registry.rs  types.rs
src/tools/builtin/: file_read.rs  file_write.rs  mod.rs  shell_execute.rs  system_info.rs  web_fetch.rs
src/ui/: account_selector.rs  chat_view.rs  input_area.rs  message_widget.rs  mod.rs  onboarding.rs  sidebar.rs  window.rs
src/ui/dialogs/: account_setup.rs  mod.rs  system_prompt.rs  tool_approval.rs
src/ui/preferences/: accounts_page.rs  appearance_page.rs  chat_page.rs  mod.rs
